# squared

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .tflint.hcl  CONTRIBUTING.md  README.md  snowflake.yml
.devcontainer/: devcontainer.json
.github/workflows/: clean_snowflake.yml  el_ssa_ip_addresses.yml  hub_metrics_publish.yml  prod_deploy.yml  slack_notifications.yml  test.yml
data/: .env.template  .gitignore  .sqlfluff  .sqlfluffignore  CONTRIBUTING.md  Makefile  README.md  ci_get_install_script.py  discovery.yml  environments.meltano.yml  files.meltano.yml  meltano.yml  requirements.txt  secrets.yml  sqlfluff_file_changes.py
data/airflow/: .gitignore
data/analyze/: README.md
data/environments/: cicd.meltano.yml  dbt_dev.meltano.yml  jigsaw.meltano.yml  prod.meltano.yml  staging.meltano.yml  userdev.meltano.yml
data/extract/: extractors.meltano.yml  mappers.meltano.yml
data/load/: loaders.meltano.yml
data/mappers/: clean_text.py  mappers.meltano.yml
data/orchestrate/: README.md  dag_definition.yml  orchestrators.meltano.yml  requirements.txt
data/output/: .gitkeep  README.md
data/transform/: .gitignore  .sqlfluffignore  README.md  dbt_project.yml  packages.yml  transformers.meltano.yml
data/utilities/: utilities.meltano.yml
data/utilities/snowflake-cloner/: .copier-answers.yml  .gitignore  README.md  pyproject.toml
data/utilities/snowflake-cloner/snowflakecloner_ext/: __init__.py  extension.py  main.py  pass_through.py  snowflake_wrapper.py
deploy/: .gitignore  client_vpn_admin.sh
deploy/infra/: .terraform.lock.hcl  README.md  (+10 more)
(+511 files in other folders)
